Update header title to 'Adi's Angular Study Hub'

--- a/angular.html
+++ b/angular.html
@@ -108,7 +108,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1>Angular Study Hub</h1>
+            <h1>Adi's Angular Study Hub</h1>
             <p>Select a chapter to dive into your notes.</p>
         </header>
 
